--- a/RL_Sutton_Barto.tex
+++ b/RL_Sutton_Barto.tex
@@ -19,7 +19,7 @@
 \tableofcontents
 \newpage
 	
-\section{Chapter 1: The reinforcement learning problem}
+\section{The reinforcement learning problem}
 \subsection{Self-Play }
 \textit{Suppose, instead of playing against a random opponent, the reinforcement learning algorithm 		described above played against itself, with both sides learning. What do you think would happen in this case? Would it learn a different policy for selecting moves?}\\
 
@@ -62,7 +62,7 @@ $ (1-\alpha_1)^nQ_1 + \sum_{i=1}^{n} \alpha_i(1-\alpha_i)^{n-i}R_i $
 
 Because compared to the realistic greedy method, in the first n steps each of the n arms is pulled exactly once. That means that after exploring each arm, for one round at least we are very likely to choose the optimal action. This  implies that we will definitely have a sharp spike in the optimal action vs steps plot. For comparison, the realistic greedy method explores much less and has much less chance of finding out about the optimal action in the early rounds. 
 
-\subsection{Programming: }
+\subsection{Programming: Comparison of stepsizes}
 \textit{Design and conduct an experiment to demonstrate the difficulties that sample-average methods have for nonstationary problems. Use a modified version of the 10-armed testbed in which all the q*(a) start out equal and then take independent random walks. Prepare plots like Figure 2.2 for an action-value method using sample averages, incrementally computed by $\alpha = 1$ , and another n action-value method using a constant step-size parameter, $\alpha= 0.1$. Use $\epsilon$ = 0.1 and, if necessary, runs longer than 1000 steps.} \\ 
 
 Remember the update rule of the iterative sample-average method: New estimate = Old Estimate + stepsize * [old estimate - target]. As seen in the book, the problem about non-constant step-sizes like $\frac{1}{n}$ is that if we have a non-stationary problem, they cannot adapt anymore after a certain time, because we are not updating the old estimate enough anymore(because the stepsize goes to zero). \\ 
@@ -86,9 +86,8 @@ By running different experiments with 1000 steps and a 1000 repetitions we got t
 	\includegraphics[width=0.7\textwidth, height = 130px]{images/stepsize_comparison_non_stationary.png}
 	\caption{Epsilon greedy algorithm with $epsilon = 0.1$ on a non-stationary problem. \\ Blue: stepsize = $\frac{1}{n}$, Red: stepsie = 0.1}
 \end{figure}
- 
-For code solutions see Coding/Chapter02/Exercise2.4
 
+For code solutions see Coding/Chapter02/Exercise2.4
 
 \subsection{Spike in UCB plot}
 \textit{In Figure 2.4 the UCB algorithm shows a distinct spike in performance on the 11th step. Why is this? Note that for your answer to be fully satisfactory it must explain both why the reward increases on the 11th step and why it decreases on the subsequent steps. Hint: if c = 1, then the spike is much less prominent.} \\ 
@@ -96,6 +95,45 @@ For code solutions see Coding/Chapter02/Exercise2.4
 I am not so sure about this answer, but I think it is a similar reasoning as my answer in 2.3. If we have a larger c, we explore more. We see that the initial average rewards are very small, thus increasing t will make the confidence bound of the not yet selected arms definitelly larger than the already explored arms. This leads to a probable scenario where in the first 10 steps we explore each arm exactly once. So from the eleventh step on we will not consider "bad" arms for a longer period(until t is large enough) and will choose one of the better arms with a high likelihood. 
 
 Note to myself: The fishy thing about this idea is that after one round, our confidence about which arm is good or bad is very low. So there is a high likelihood that a "bad" arm yields a good reward and vice versa. This contradicts the argument form above. 
+
+\section{Finite Markov Decision Processes}
+\subsection{Reinforcement Learning Applications}
+\textit{Devise three example tasks of your own that fit into the reinforcement learning framework, identifying for each its states, actions, and rewards. Make the three examples as different from each other as possible. The framework is abstract and flexible and can be applied in many different ways. Stretch its limits in some way in at least one of your examples.}\\
+
+\begin{enumerate}
+	\item Flying an airplane: The framework would learn how to operate an airplane by toggling all the buttons etc. The states would be the current setting of all possible buttons etc, and the necessary information for the state of the airplane(like height, speed etc.). The actions as mentioned above is changing the possible buttons and steering the steering wheel. The rewards would be positive for keeping the airplane steady and negative for crashing the airplane or quickly changing the airplane's direction. 
+	\item Recommender System: The framework would learn to recommend personalized news articles, according to ones clicks on articles. The state's would be the different sets of recommended articles. The reward would be positive if the user clicked on any article and negative if he/she didn't. The action is to recommend a set of articles. 
+	\item Traffic Light System: One could use the framework to handle the traffic lights of a city such that the traffic flow is optimal and traffic jams are mostly avoided. This is very feasible, because such a framework could be trained with simulated traffic, which can easily be done. The states would be time intervalls such as 2 seconds. After each such intervall the framework has to take an action. The actions are to change the traffic lights at different locations. Obviously there are lots of traffic lights which can be on or off, thus there are also many actions. The reward is negative the longer the cars have to wait. Thus you could sum up all the waiting time of all the cars. Minimizing their waiting time means thus to maximize the reward. 
+\end{enumerate}
+
+\subsection{Exception Problems}
+\textit{Is the reinforcement learning framework adequate to usefully represent all goal-directed learning tasks? Can you think of any clear exceptions?}\\
+It does obviously not work for problems that don't have a clear reward signal. Although for these cases there is some research done into yielding intrinsic curiosity rewards. Unfortunately currently nothing concretely comes to my mind.
+
+\subsection{Driving}
+\textit{Consider the problem of driving. You could define the actions in terms of the accelerator, steering wheel, and brake, that is, where your body meets the machine. Or you could define them farther out - say, where the rubber meets the road, considering your actions to be tire torques. Or you could define them farther in - say, where your brain meets your body, the actions being muscle twitches to control your limbs. Or you could go to a really high level and say that your actions are your choices of where to drive. What is the right level, the right place to draw the line between agent and environment? On what basis is one location of the line to be preferred over another? Is there any fundamental reason for preferring one location over another, or is it a free choice?}\\
+
+I would say the right level to draw the line between agent and environment is outside of the actions with which the agent has most control over the task, but is not helplessly overwhelmed by the choice. So to make it concrete in this case, I guess by defining the actions wich the accelerator, steering wheel and brake the agent has most control over the car but not so much that he won't figure out how to steer the car. If you but the boundary at the choise of where to drive, the car won't do anything, so the agent has no real control. If you put the boundary at the twitches of your muscle, you have too much control and the agent might never figure out how to drive the car. Because lots of muscle's are not needed for this task and thus completely irrelevant. So the best choice is a trade-off between control and not having too many options. But that means it always depends on the goal, because only if you know your goal you can figure out what actions are irrelevant to it. 
+
+\subsection{Pole-Balancing}
+\textit{Suppose you treated pole-balancing as an episodic task but also used discounting, with all rewards zero except for -1 upon failure. What then would the return be at each time? How does this return differ from that in the discounted, continuing formulation of this task?}\\ 
+
+I somehow find this a tricky question. As described in the pole-balancing example, for a continuous taks with discounting, the return at each time would be related to $-\gamma^k$ where k are the number of timesteps before failure. If we now apply this same discounting rate to a episodic task, where every episode is a single timestep, most of the rewards for each timestep would be 0 except for the failure which would be -1. To me it makes sense to look at another example, what if the episodes would be 10 time steps. Then in step i of this episode you would look ahead 10-i steps and discount them accordingly. But if no failure occurs in this episode, the sum of the rewards will always be zero, except if a failure occurs in this time episode. Remember though that we had episodes that were 1 timestep large, this implies that only on a failure, the rewards will be $\gamma\cdot$-1. Obviously this is not very helpful because only when you have a failure you recognize that you will fail(but then it already hapened). 
+
+\subsection{Maze-robot}
+\textit{Imagine that you are designing a robot to run a maze. You decide to give it a reward of +1 for escaping from the maze and a reward of zero at all other times. The task seems to break down naturally into episodes - the successive runs through the maze - so you decide to treat it as an episodic task, where the goal is to maximize expected total reward (3.1). After running the learning agent for a while, you find that it is showing no improvement in escaping from the maze. What is going wrong? Have you effectively communicated to the agent what you want it to achieve?}\\
+
+No you have not correctly communicated what you want the agent to do. You want it to escape from the maze as quickly as possible. Thus you will have to enforce a negative reward for each time step that the robot has not escaped the maze. Maximizing this reward means escaping the maze as quickly as possible. 
+
+\subsection{Broken Vision System}
+\textit{Imagine that you are a vision system. When you are first turned on for the day, an image floods into your camera. You can see lots of things, but not all things. You can't see objects that are occluded, and of course you can't see objects that are behind you. After seeing that first scene, do you have access to the Markov state of the environment? Suppose your camera was broken that day and you received no images at all, all day. Would you have access to the Markov state then?}\\
+
+In the first case, yes you do have access to the Markov state of the environment. No matter how the things that you currently see came into this scene, or how long they are there, you know everything you can abou this scene for this moment. The current scene is a summary of everything that has happened so for to this scene. 
+If you recevied no feed at all you would not have access to the Markov state of the scene. Because you would no nothing about it and obviously nothing is not a summary of all that has happened before. 
+
+\subsection{Bellmann equation}
+\textit{What is the Bellman equation for action values, that is, for $q_{\pi}$? It must give the action value $q_{\pi}(s,a)$ in terms of the action values, $q_{\pi}s',a')$, of possible successors to the state-action pair (s,a). As a hint, the backup diagram corresponding to this equation is given in Figure 3.4 (right). Show the sequence of equations analogous to (3.12), but for action values.}
+
 \end{document}
 
 
